--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "grommet": "2.12.0",
+    "grommet": "2.9.0",
     "grommet-icons": "4.4.0",
     "lodash": "4.17.15",
     "react": "^16.13.1",
@@ -18,7 +18,8 @@
     "redux": "4.0.5",
     "redux-firestore": "0.13.0",
     "redux-thunk": "2.3.0",
-    "styled-components": "5.1.0"
+    "styled-components": "5.1.0",
+    "uuid": "^7.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
