--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-redux-firebase": "3.3.0",
     "react-router-dom": "5.1.2",
     "react-scripts": "3.4.1",
+    "react-use-dimensions": "^1.2.1",
+    "react-wavify": "^1.3.0",
     "redux": "4.0.5",
     "redux-firestore": "0.13.0",
     "redux-thunk": "2.3.0",
