--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "firebase": "7.14.2",
     "grommet": "2.9.0",
     "grommet-icons": "4.4.0",
     "lodash": "4.17.15",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-helmet": "^6.0.0",
+    "react-hook-form": "^5.6.0",
     "react-redux": "7.2.0",
     "react-redux-firebase": "3.3.0",
     "react-router-dom": "5.1.2",
@@ -20,6 +23,7 @@
     "redux": "4.0.5",
     "redux-firestore": "0.13.0",
     "redux-thunk": "2.3.0",
+    "slugify": "1.4.0",
     "styled-components": "5.1.0",
     "uuid": "^7.0.3"
   },
@@ -27,7 +31,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "firebase:export": "node -r esm db/exportToFirebase"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -53,6 +58,7 @@
     "eslint-plugin-prettier": "3.1.3",
     "eslint-plugin-react": "7.19.0",
     "eslint-plugin-react-hooks": "3.0.0",
+    "esm": "3.2.25",
     "prettier": "2.0.4",
     "redux-devtools-extension": "2.13.8",
     "source-map-explorer": "2.4.2"
