--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-hook-form": "^5.6.0",
     "react-redux": "7.2.0",
     "react-redux-firebase": "3.3.0",
+    "react-redux-toastr": "^7.6.4",
     "react-router-dom": "5.1.2",
     "react-scripts": "3.4.1",
     "react-use-dimensions": "^1.2.1",
@@ -32,6 +33,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "firebase:deploy": "npm run build && firebase deploy",
     "firebase:export": "node -r esm db/exportToFirebase"
   },
   "eslintConfig": {
